--- a/ARTICLE/LaTeX_DL_468198_240419/articolo.tex
+++ b/ARTICLE/LaTeX_DL_468198_240419/articolo.tex
@@ -409,7 +409,12 @@ TODOS:
   \item How to get a scenario for which the aggregated ED solution is feasible
   \item How to easily compute when an aggregated interval is "far" from such fesible scenario
   \item Unaggregate on those intervals first.
+  \item Add examples
 \end{itemize}
+\gr[inline]{Secondo me ci sta scriverlo in maniera un filo generale perchè:
+Così questo metodo non è ristretto a solo (ed esattamente) a questo modello,  magari diventa chiaro che aggiungendo generatori tradizionali tutto funciona comunque e top.
+Oppure per problemi totalmente diversi ma con una struttura simile.
+Poi così alcune dimostrazioni si "semplificano", ad esempio qui il problema della conservazione dei costi nel caso le variabili sono negative non sorgeva perchè ci si è ristretti a una formulazione con variabili positive (alla quale ci si può poi ricondurre come abbiamo visto).}
 
 
 
@@ -489,16 +494,32 @@ Then \(x_{\colP_{=1}} \coloneqq \tilde{x}_{\colP_{=1}}\) and \(x_{f^r(C)} \colon
 \end{proposition}
 
 
+Ass: Union of supports is all variables.
 \begin{observation}
-  Under the hypothesis of the previous proposition, if  \((\rowP, \colP)\) is an equal weight aggregation, then the cost of the aggregated problem 
-  is equal to the cost of the unaggregated problem. \gr[]{can we generalize this?}
+  Under the hypothesis of the previous proposition, if \(\tilde{C}_C = c_{f(r,C)}\) and if \( f^r(C) = f^{r'}(C')\) then \(C = C'\) and \(\{f^r(X)\}_{r \in \cup_{R\in \rowP_{>1}} = \cup_{C \in \colP_{>1}}C}\). then the cost of the aggregated problem 
+  is equal to the cost of the unaggregated problem. 
 \end{observation}
+\begin{proof}
+  Let \(\tilde{x}\) be a solution to the aggregated problem \eqref{eq:LPaggr}. For all \(C \in \colP_{>1}\) the cost corresponding to the variable \(\tilde{x}_C\) is 
+  \[
+  \tilde{c}_C\tilde{x}_C = \tilde{c}_C\sum_{r \in R}\rho_r\tilde{x}_C = \tilde{c}_C\sum_{r \in R}x_{f(r,C)} = \sum{c}_{r \in R}c_{f(r,C)}x_{f(r,C)}
+  \]
+  Which correspond to the cost of the variables \(\{x_{f(r,C)}\}_{r \in R}\). Thus
+  \[
+  \tilde{c}\tilde{x} = \sum_{C \in \colP_{=1}}\tilde{c}_C\tilde{x}_C + \sum_{C \in \colP_{>1}}\tilde{c}_C\tilde{x}_C = \sum_{C \in \colP_{=1}}c_Cx_C + \sum_{C \in \colP_{>1}}\sum_{r \in R}c_{f(r,C)}x_{f(r,C)} =  \sum_{C \in \colP_{=1}}c_Cx_C + \sum_{j \in \cup_{C \in \colP_{>1}}C}c_{i}x_{i} =  cx
+  \]
+
+\end{proof}
+
 
 While row aggregation of a linear problem is a relaxation of the original problem, the same does not apply to column aggregation. However, the column aggregation used for the  Capacity Expansion Problem in this work is still a relaxation. More generally column aggregation leads to a relaxation whenever, for every set \( C \in \rowP \) of variables that are aggregated together, each variable in \( C \) has the same coefficients in every row of the aggregated problem defined by \( \rowP \), except for those rows where all the coefficients of the variables are zero.
 
 Then if the weights of the columns correspond to the coefficients of the variables in the aggregated problem (We substitute the columns corresponding to \( C \) with a vector of all ones). The previous conditions ensures that such weights are well defined and do not depend on the non-null row considered.
+We refer to this as a \emph{constant-coefficients column agreggation}
 
-
+\begin{observation}
+Under the hypothesis of the previous two observations and is a constant-coefficients column aggregation, then the relaxation is exact. Thas is \(x\) is an optimal solution of the original problem \eqref{eq:LP}. \gr[]{da scrivere meglio ma devo fuggire}
+\end{observation}
 \section{COMPUTATIONAL RESULTS}
 \subsection{SINGLE NODE NETWORK}
 First, an electrical grid with a single node is considered (corresponding ideally to an area with uniform
